--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 <map name="workmap">
   
-  <area shape="rect" coords="50,212,193,300" alt="hoof" href="https://i.pinimg.com/236x/8e/52/9d/8e529d377ef54250d2ffe0518b3ac38a--horse-camp-paint-horses.jpg">
-  <area shape="rect" coords="170,152,373,230" alt="stomach" href="https://cf.ppt-online.org/files1/slide/f/FxDHsYZlk7MtNyvLO3wo2dePJz1SQUm0j9fuIipa6/slide-6.jpg">
+  <area shape="rect" coords="50,212,193,300" alt="hoof" href="https://pineappleanicode.github.io/offshoot-1/">
+  <area shape="rect" coords="170,152,373,230" alt="stomach" href="https://pineappleanicode.github.io/offshoot-2/">
 </map>
