--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <section id="a searcher's reward" class="inactive" style="display: none;"WHAT DID YOU DO?!</p></section>
 
-<br><br><br><br><div align="center"><font color="red"><s>humans can't bare to imgine that they mean nothing, if they ever truly realsed, they'd combust.</s>
+<br><br><br><br><div align="center"><font color="red"><s>If they find out the truth, it could be catastrophic</s>
 
 <br><div align="center"><p style="font-family: Arial"><font color="white">Oops, i've said too much. Carry on travelling, searcher.
 
